jsx and components(react)
jsx rules and components pushing

--- a/react-ecom/src/index.css
+++ b/react-ecom/src/index.css
@@ -17,3 +17,12 @@ code {
 .height{
   height:700px
 }
+.ch{
+  width: 100%;
+}
+.chi{
+  width:100%;height: 200px;
+}
+.card:hover{
+  transform: scale(1.1,1.1);
+}
