--- a/React projects/presento/src/components/css/header.css
+++ b/React projects/presento/src/components/css/header.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #fff;
+  background:rgb(173, 110, 110);
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
@@ -308,7 +308,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  /* background: url("../img/hero-bg.jpg") top center no-repeat; */
+  background: url("../assets/img/hero-bg.jpg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 82px;
